proof-of-concept for the trajectory filtering

--- a/search-catalog.ipynb
+++ b/search-catalog.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24aec7a8-d757-47b8-ac12-c19ddd3255e1",
+   "id": "0",
    "metadata": {
     "tags": []
    },
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff7fec40-1cdf-4019-b5ba-3414d261a097",
+   "id": "1",
    "metadata": {
     "tags": []
    },
@@ -27,33 +27,23 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "cf0adf9d-751e-4a00-8d72-7136341f6d70",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "extent = BoundingBox(-15, 43, 5, 50)\n",
-    "extent.boundary()"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5f7ac38-d056-465a-acc0-0a9665caff94",
+   "id": "2",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
     "import folium\n",
-    "from toolz.functoolz import curry"
+    "from folium.plugins.timestamped_geo_json import TimestampedGeoJson\n",
+    "from tlz.functoolz import curry"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0df83577-9476-49d4-8d55-987c7e1fd78a",
+   "id": "3",
    "metadata": {
     "tags": []
    },
@@ -84,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b14ce8b-8558-4e29-8640-50e2fd10e134",
+   "id": "4",
    "metadata": {
     "tags": []
    },
@@ -97,26 +87,78 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "974e6c11-4955-47c7-b96f-59dc000f93a5",
+   "id": "5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tlz.itertoolz import groupby"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "def visualize_item(item):\n",
-    "    category = extract_category(item.collection_id)\n",
+    "def as_geojson(items, style_function):\n",
+    "    for item in items:\n",
+    "        category = extract_category(item.collection_id)\n",
     "\n",
-    "    marker = folium.CircleMarker()\n",
-    "    return folium.GeoJson(\n",
-    "        item.geometry,\n",
-    "        style_function=curry(style_function, category=category),\n",
-    "        marker=marker,\n",
-    "    )"
+    "        marker = folium.CircleMarker()\n",
+    "        yield folium.GeoJson(\n",
+    "            item.geometry,\n",
+    "            style_function=curry(style_function, category=category),\n",
+    "            marker=marker,\n",
+    "        )\n",
+    "\n",
+    "\n",
+    "def as_timestamped_geojson(items, style_function):\n",
+    "    def as_timestamped(item):\n",
+    "        category = extract_category(item.collection_id)\n",
+    "\n",
+    "        style = style_function(None, category)\n",
+    "        return {\n",
+    "            \"type\": \"Feature\",\n",
+    "            \"geometry\": item.geometry,\n",
+    "            \"properties\": {\n",
+    "                \"times\": item.properties[\"time\"],\n",
+    "                \"style\": style,\n",
+    "            },\n",
+    "        }\n",
+    "\n",
+    "    features = [as_timestamped(item) for item in items]\n",
+    "\n",
+    "    yield TimestampedGeoJson(\n",
+    "        {\"type\": \"FeatureCollection\", \"features\": features}, duration=\"P10M\"\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "def visualize_items(items, style_function):\n",
+    "    def predicate(item):\n",
+    "        if \"time\" in item.properties and item.geometry[\"type\"] == \"LineString\":\n",
+    "            type_ = \"trajectory\"\n",
+    "        else:\n",
+    "            type_ = \"static\"\n",
+    "\n",
+    "        return type_\n",
+    "\n",
+    "    grouped = groupby(predicate, items)\n",
+    "    transforms = {\n",
+    "        \"static\": as_geojson,\n",
+    "        \"trajectory\": as_timestamped_geojson,\n",
+    "    }\n",
+    "\n",
+    "    for group, elems in grouped.items():\n",
+    "        transform = transforms.get(group)\n",
+    "        yield from transform(elems, style_function=style_function)"
    ]
   },
   {
    "cell_type": "raw",
-   "id": "76265907-a219-4a4a-8eaf-e121e896b5e5",
+   "id": "7",
    "metadata": {
     "tags": []
    },
@@ -128,18 +170,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ef22524-dfdb-4e93-82c8-921234c30ca3",
+   "id": "8",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "def visualize_search(extent, items):\n",
-    "    m = folium.Map(width=\"80%\", height=\"80%\", tiles=\"cartodbpositron\")\n",
+    "def visualize_search(extent, items, m=None):\n",
+    "    if m is None:\n",
+    "        m = folium.Map(width=\"80%\", height=\"80%\", tiles=\"cartodbpositron\")\n",
     "\n",
-    "    folium.GeoJson(extent.boundary().geojson()).add_to(m)\n",
-    "    for item in items:\n",
-    "        visualize_item(item).add_to(m)\n",
+    "    folium.GeoJson(extent.geojson()).add_to(m)\n",
+    "    for elem in visualize_items(items, style_function=style_function):\n",
+    "        elem.add_to(m)\n",
     "\n",
     "    return m"
    ]
@@ -147,48 +190,84 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd3efc22-4ae5-46bf-a55a-0125cd7ad2f1",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "extent = BoundingBox(-15, 43, 5, 50)\n",
-    "items = client.search(\n",
-    "    datetime=\"2022-06-01/2022-06-30\", bbox=extent.bbox\n",
-    ").item_collection()\n",
-    "items"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dc9746cc-efc6-457b-8e23-6fd2f35872b1",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "import xarray as xr\n",
-    "import fsspec"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "076811d9-c61e-4099-a0b7-54a4cdf68c1c",
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "asset = items[0].assets[\"https\"]\n",
-    "fs = fsspec.filesystem(\"http\")\n",
-    "xr.open_dataset(fs.open(asset.href), **asset.extra_fields[\"xarray:open_kwargs\"])"
+    "import pandas as pd\n",
+    "import geopandas as gpd\n",
+    "import movingpandas as mpd\n",
+    "\n",
+    "import shapely\n",
+    "\n",
+    "from tlz.itertoolz import remove\n",
+    "\n",
+    "\n",
+    "def extract_trajectory(item):\n",
+    "    geometry = item.geometry\n",
+    "    coordinates = shapely.points(geometry[\"coordinates\"])\n",
+    "    time = pd.to_datetime(item.properties[\"time\"], format=\"ISO8601\").astype(\n",
+    "        \"datetime64[s]\"\n",
+    "    )\n",
+    "\n",
+    "    # TODO: find the crs info from the item properties\n",
+    "    gdf = gpd.GeoDataFrame({\"time\": time}, geometry=coordinates, crs=4326).set_index(\n",
+    "        \"time\"\n",
+    "    )\n",
+    "    return mpd.Trajectory(gdf, traj_id=item.id)\n",
+    "\n",
+    "\n",
+    "def filter_trajectories(items, geometry, timespan):\n",
+    "    def predicate(item):\n",
+    "        traj = extract_trajectory(item)\n",
+    "\n",
+    "        segment = traj.get_segment_between(*pd.to_datetime(timespan))\n",
+    "        return not segment.intersects(geometry)\n",
+    "\n",
+    "    return list(remove(predicate, items))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d7bd456-ed02-449c-9a86-3e73d5b43cf4",
+   "id": "10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "geometry = BoundingBox(-15, 43, 5, 50).boundary()\n",
+    "timespan = [\"2019-11-01\", \"2019-11-15\"]\n",
+    "\n",
+    "unfiltered = client.search(\n",
+    "    collections=[\"TS\"],\n",
+    "    intersects=geometry,\n",
+    "    datetime=timespan,\n",
+    "    limit=100,\n",
+    ").item_collection()\n",
+    "\n",
+    "filtered = filter_trajectories(unfiltered, geometry.geom, timespan)\n",
+    "len(unfiltered), len(filtered)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "m = folium.plugins.DualMap(layout=\"horizontal\", tiles=\"cartodbpositron\")\n",
+    "visualize_search(geometry, unfiltered, m=m.m1)\n",
+    "visualize_search(geometry, filtered, m=m.m2)\n",
+    "\n",
+    "m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": []
