make use of the module in the exploration notebook

--- a/search-catalog.ipynb
+++ b/search-catalog.ipynb
@@ -10,7 +10,8 @@
    "outputs": [],
    "source": [
     "import pystac_client\n",
-    "from odc.geo import BoundingBox"
+    "from stac_insitu.filter import filter_trajectories\n",
+    "import shapely"
    ]
   },
   {
@@ -36,8 +37,8 @@
    "outputs": [],
    "source": [
     "import folium\n",
-    "from folium.plugins.timestamped_geo_json import TimestampedGeoJson\n",
-    "from tlz.functoolz import curry"
+    "import folium.plugins\n",
+    "from stac_insitu.visualization import visualize_search"
    ]
   },
   {
@@ -75,166 +76,10 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "def extract_category(id):\n",
-    "    return id.split(\"-\")[-1].lower()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tlz.itertoolz import groupby"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "def as_geojson(items, style_function):\n",
-    "    for item in items:\n",
-    "        category = extract_category(item.collection_id)\n",
-    "\n",
-    "        marker = folium.CircleMarker()\n",
-    "        yield folium.GeoJson(\n",
-    "            item.geometry,\n",
-    "            style_function=curry(style_function, category=category),\n",
-    "            marker=marker,\n",
-    "        )\n",
-    "\n",
-    "\n",
-    "def as_timestamped_geojson(items, style_function):\n",
-    "    def as_timestamped(item):\n",
-    "        category = extract_category(item.collection_id)\n",
-    "\n",
-    "        style = style_function(None, category)\n",
-    "        return {\n",
-    "            \"type\": \"Feature\",\n",
-    "            \"geometry\": item.geometry,\n",
-    "            \"properties\": {\n",
-    "                \"times\": item.properties[\"time\"],\n",
-    "                \"style\": style,\n",
-    "            },\n",
-    "        }\n",
-    "\n",
-    "    features = [as_timestamped(item) for item in items]\n",
-    "\n",
-    "    yield TimestampedGeoJson(\n",
-    "        {\"type\": \"FeatureCollection\", \"features\": features}, duration=\"P10M\"\n",
-    "    )\n",
-    "\n",
-    "\n",
-    "def visualize_items(items, style_function):\n",
-    "    def predicate(item):\n",
-    "        if \"time\" in item.properties and item.geometry[\"type\"] == \"LineString\":\n",
-    "            type_ = \"trajectory\"\n",
-    "        else:\n",
-    "            type_ = \"static\"\n",
-    "\n",
-    "        return type_\n",
-    "\n",
-    "    grouped = groupby(predicate, items)\n",
-    "    transforms = {\n",
-    "        \"static\": as_geojson,\n",
-    "        \"trajectory\": as_timestamped_geojson,\n",
-    "    }\n",
-    "\n",
-    "    for group, elems in grouped.items():\n",
-    "        transform = transforms.get(group)\n",
-    "        yield from transform(elems, style_function=style_function)"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "7",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "categories = {extract_category(item.collection_id) for item in items}\n",
-    "categories"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "def visualize_search(extent, items, m=None):\n",
-    "    if m is None:\n",
-    "        m = folium.Map(width=\"80%\", height=\"80%\", tiles=\"cartodbpositron\")\n",
-    "\n",
-    "    folium.GeoJson(extent.geojson()).add_to(m)\n",
-    "    for elem in visualize_items(items, style_function=style_function):\n",
-    "        elem.add_to(m)\n",
-    "\n",
-    "    return m"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import geopandas as gpd\n",
-    "import movingpandas as mpd\n",
-    "\n",
-    "import shapely\n",
-    "\n",
-    "from tlz.itertoolz import remove\n",
-    "\n",
-    "\n",
-    "def extract_trajectory(item):\n",
-    "    geometry = item.geometry\n",
-    "    coordinates = shapely.points(geometry[\"coordinates\"])\n",
-    "    time = pd.to_datetime(item.properties[\"time\"], format=\"ISO8601\").astype(\n",
-    "        \"datetime64[s]\"\n",
-    "    )\n",
-    "\n",
-    "    # TODO: find the crs info from the item properties\n",
-    "    gdf = gpd.GeoDataFrame({\"time\": time}, geometry=coordinates, crs=4326).set_index(\n",
-    "        \"time\"\n",
-    "    )\n",
-    "    return mpd.Trajectory(gdf, traj_id=item.id)\n",
-    "\n",
-    "\n",
-    "def filter_trajectories(items, geometry, timespan):\n",
-    "    def predicate(item):\n",
-    "        traj = extract_trajectory(item)\n",
-    "\n",
-    "        segment = traj.get_segment_between(*pd.to_datetime(timespan))\n",
-    "        return not segment.intersects(geometry)\n",
-    "\n",
-    "    return list(remove(predicate, items))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "10",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "geometry = BoundingBox(-15, 43, 5, 50).boundary()\n",
+    "geometry = shapely.box(-15, 43, 5, 50)\n",
     "timespan = [\"2019-11-01\", \"2019-11-15\"]\n",
     "\n",
     "unfiltered = client.search(\n",
@@ -244,14 +89,14 @@
     "    limit=100,\n",
     ").item_collection()\n",
     "\n",
-    "filtered = filter_trajectories(unfiltered, geometry.geom, timespan)\n",
+    "filtered = filter_trajectories(unfiltered, geometry, timespan)\n",
     "len(unfiltered), len(filtered)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "5",
    "metadata": {
     "tags": []
    },
@@ -267,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "6",
    "metadata": {},
    "outputs": [],
    "source": []
