--- a/search-catalog.ipynb
+++ b/search-catalog.ipynb
@@ -97,6 +97,28 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from rich.console import Console\n",
+    "\n",
+    "console = Console()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "console.print(filtered[0].to_dict())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7",
    "metadata": {
     "tags": []
    },
@@ -112,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6",
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": []
