small changes to the demo (#3)
* display the metadata of an item for reference

* widen the search area

--- a/search-catalog.ipynb
+++ b/search-catalog.ipynb
@@ -79,7 +79,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "geometry = shapely.box(-15, 43, 5, 50)\n",
+    "geometry = shapely.box(-25, 43, 2, 60)\n",
     "timespan = [\"2019-11-01\", \"2019-11-15\"]\n",
     "\n",
     "unfiltered = client.search(\n",
@@ -97,6 +97,28 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from rich.console import Console\n",
+    "\n",
+    "console = Console()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "console.print(filtered[0].to_dict())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7",
    "metadata": {
     "tags": []
    },
@@ -112,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6",
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": []
