change the search timespan to somewhere within data availability

--- a/search-catalog.ipynb
+++ b/search-catalog.ipynb
@@ -80,7 +80,7 @@
    "outputs": [],
    "source": [
     "geometry = shapely.box(-25, 43, 2, 60)\n",
-    "timespan = [\"2019-11-01\", \"2019-11-15\"]\n",
+    "timespan = [\"2023-04-15T00:00:00\", \"2023-05-02T00:00:00\"]\n",
     "\n",
     "unfiltered = client.search(\n",
     "    collections=[\"TS\"],\n",
