--- a/search-catalog.ipynb
+++ b/search-catalog.ipynb
@@ -23,7 +23,7 @@
    },
    "outputs": [],
    "source": [
-    "client = pystac_client.Client.open(\"http://127.0.0.1:9588\")\n",
+    "client = pystac_client.Client.open(\"https://keewis-stac-insitu.hf.space\")\n",
     "client"
    ]
   },
