--- a/search-catalog.ipynb
+++ b/search-catalog.ipynb
@@ -3,6 +3,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5d069a14-fc25-4026-a342-ba986ca3e420",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "!pip install -e ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4caeea78-6741-4360-b18e-f3239c85975b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install rich"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "0",
    "metadata": {
     "tags": []
@@ -109,7 +131,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "console.print(filtered[0].to_dict())"
@@ -146,7 +170,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "fs = fsspec.filesystem(\"http\")\n",
@@ -156,17 +182,14 @@
     "]\n",
     "dss"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "10",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
@@ -176,7 +199,8 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "ipython3",
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
